--- a/sass/sass/common/_grid.scss
+++ b/sass/sass/common/_grid.scss
@@ -160,82 +160,14 @@
 // 子層欄寬（自由）: @include flex-col(欄數, margin , padding);
 
 // step 1、啟動 flex
-// .flex-equal-2,
-// .flex-equal-3,
-// .flex-equal-4,
-// .flex-equal-5,
-// .flex-equal-5-3-1,
-// .flex-equal-6,
-// .flex-equal-6-4-2,
-// .flex-equal-6-3-1,
-// .flex-equal-6-2,
-// .flex-equal-7,
-// .flex-equal-8,
-// .flex-equal-8-6-4,
-// .flex-equal-8-5-3,
-// .flex-equal-8-5-2,
-// .flex-equal-9,
-// .flex-equal-9-6-3,
-// .flex-equal-9-5-4,
-// .flex-equal-9-4-2,
-// .flex-equal-10,
-// .flex-equal-11,
-// .flex-equal-12,
-// .flex-5,
-// .flex-6,
-// .flex-7,
-// .flex-8,
-// .flex-9,
-// .flex-10,
-// .flex-11,
-// .flex-3-3,
-// .flex-4-4,
-// .flex-5-5,
-// .flex-5-7,
-// .flex-6-6,
-// .flex-8-4,
-// .flex-4-8,
-// .flex-4-4-4,
-// .flex-3-3-3-3,
-// .flex-equal-TT,
-// .flex-equal-TT-11, .flex-equal-TT-10, .flex-equal-TT-9, .flex-equal-TT-8, .flex-equal-TT-7,
-// .flex-equal-TT-6, .flex-equal-TT-5, .flex-equal-TT-4, .flex-equal-TT-3, .flex-equal-TT-2{
-//     margin: 1em 0;
-
-//     // h2{ text-align: center; }
-
-//     // .Flex-set{
-//     //     // 啟動flex
-//     //     @extend %flex_set;
-//     //     background: #eee;
-//     //     .col{
-//     //         p{ color: rgba(255,255,255,.5); }
-//     //     }
-//     //     .left{
-//     //         @include flex-col(5, 2px, 40px);
-//     //         // 自定義 ----------------- start
-//     //         background: #027e98;
-//     //         color: #fff;
-//     //         // ---------------------- end
-//     //     }
-//     //     .right{
-//     //         @include flex-col(7, 10px, 120px);
-//     //         // 自定義 ----------------- start
-//     //         background: deeppink;
-//     //         color: #fff;
-//     //         // ---------------------- end
-//     //     }
-//     // }
-// }
-
-$magin: 6px;
+$margin: 12px;
 $padding: 30px;
 
-h2{ text-align: center; }
+// h2{ text-align: center; }
 .Flex-set{
     // 啟動flex
     @extend %flex_set;
-    background: #eee;
+    // sampl樣式e設定
     .col{
         background: #485b8a;
         color: #fff;
@@ -248,7 +180,7 @@ h2{ text-align: center; }
 // A - 均分（ equal ＝ 均等）
 .flex-equal-2{
     .Flex-set{
-        .col{ @include flex-col-equal(2, $magin, $padding); }
+        .col{ @include flex-col-equal(2, $margin, $padding); }
     }
     @include screen('tablet') {
         .Flex-set{
@@ -265,33 +197,32 @@ h2{ text-align: center; }
         // 方向、是否斷點
         flex-flow: row wrap;
 
-        .col{ @include flex-col-equal(3, $magin, $padding); }
+        .col{ @include flex-col-equal(3, $margin, $padding); }
 
         .thumbnail{
-            @include flex-col-equal(3, $magin, 0px);
-            // 自定義 ----------------- start
+            @include flex-col-equal(3, $margin, 0px);
             background: #fff;
             color: #222;
-            margin-bottom: .75em;
-            // ---------------------- end
+            margin-bottom: 1.75em;
         }
     }
     @include screen('tablet') {
         .Flex-set{
             @include gutter(2em);
-            .col{ @include flex-col-equal(2, $magin, $padding); }
-
-            .thumbnail{ @include flex-col-equal(2, $magin, 0px); }
+            .col{ @include flex-col-equal(2, $margin, $padding); }
+            .thumbnail{ @include flex-col-equal(2, $margin, 0px); }
         }
     }
     @include screen('mobile') {
         .Flex-set{
-            @include gutter(30px);
+            justify-content: center;
             .col{ @include flex-col-equal(1, 0px, 10px); }
-            .thumbnail{ @include flex-col-equal(1, $magin, 0px); }
+            .thumbnail{ @include flex-col-equal(1, $margin, 0px); }
         }
     }
 }
+
+
 
 .flex-equal-4{
     .Flex-set{
