--- a/sass/sass/modual/_form.scss
+++ b/sass/sass/modual/_form.scss
@@ -1,7 +1,4 @@
 $form_title_width :150px; // 表單title寬度
-$input_margin_gutter: .3em;
-
-
 
 @mixin formStyle($f_color:$color-word, $f_border:$color-gray, $f_radius:$btn-radius) {
     color: $f_color;
@@ -53,6 +50,12 @@ $input_margin_gutter: .3em;
 
 select::-ms-expand {
     display: none;
+}
+
+// 表單必填
+.necessary {
+    color: red;
+    margin: 0px .2em;
 }
 
 .form_grid {
@@ -161,9 +164,6 @@ select::-ms-expand {
                 width: auto;
                 display: inline-flex;
                 align-items: center;
-                >label{
-                    margin-bottom: 0;
-                }
             }
         }
 
@@ -189,15 +189,14 @@ select::-ms-expand {
             >.form_grp {
                 border-bottom: 0;
                 padding-top: 0;
-                align-items: flex-end;
             }
             label{
                 @include gutter(.6em);
                 padding-top: 5px;
             }
-            // @include screen('mobile'){
-            //     @include gutter();
-            // }
+            @include screen('mobile'){
+                @include gutter();
+            }
         }
 
         &.form_col-6-6 {
@@ -776,6 +775,7 @@ select::-ms-expand {
                 // max-width:  calc(100% - #{$form_title_width});
                 display: flex;
                 flex-wrap: wrap;
+                align-items: center;
                 @include gutter(0);
 
                 @include screen('mobile') {
@@ -898,11 +898,10 @@ select::-ms-expand {
         // 日期專屬
         .datepick {
             position: relative;
-            display: flex;
-            align-items: center;
 
             @include screen('xs_mobile') {
                 width: 100%;
+                display: block;
                 padding-right: 0;
             }
 
@@ -910,13 +909,6 @@ select::-ms-expand {
                 margin-left: .3em;
                 margin-right: 0;
                 padding-right: 0;
-                
-                input{
-                    margin-left: .6em;
-                    @include screen('xs_mobile'){
-                        margin-left: .3em;
-                    }
-                }
 
                 &:before {
                     content: "~";
@@ -942,7 +934,7 @@ select::-ms-expand {
                 position: absolute;
                 padding: .37em .1em !important;
                 right: 1em;
-                //top: .2em;
+                top: .2em;
                 min-width: 1em;
                 background: none;
                 border: none;
@@ -973,11 +965,6 @@ select::-ms-expand {
 
     .btn_grp {
         justify-content: center;
-    }
-
-    button,
-    .btn{
-        margin: .3em;
     }
 
     .btn,
@@ -1078,8 +1065,7 @@ select::-ms-expand {
                             background: #54caff;
                             content: "";
                             left: .35em;
-                            top: 50%;
-                            margin-top: -.5em;
+                            top: .3em;
                             z-index: -1;
                             animation: ripple 0.35s linear;
                         }
@@ -1123,11 +1109,6 @@ select::-ms-expand {
             input[type="radio"] {
                 width: 1em;
             }
-        }
-    }
-    .upload_grp{
-        .upload_btn{
-            right: 8px;
         }
     }
 }
@@ -1198,8 +1179,7 @@ select::-ms-expand {
 
 //---------------------------------------------下拉選單--------//
 label,
-legend,
- .form_title{
+legend {
     // white-space: nowrap;
     display: inline-block;
     margin: 0 0 .5em 0;
@@ -1413,7 +1393,6 @@ input[type="checkbox"]:focus {
 // https://codepen.io/shubhamc_007/pen/oZyodd
 .upload_grp {
     position: relative;
-    display: flex;
 
     input[readonly],
     input[disable] {
@@ -1424,7 +1403,7 @@ input[type="checkbox"]:focus {
     .upload_btn {
         position: absolute;
         overflow: hidden;
-        //top: 1px;
+        top: 1px;
         right: 3px;
         @extend %btn;
         @include btn_setting($form-focus, #FFF);
@@ -1455,7 +1434,7 @@ img.captcha {
     display: inline-block;
     vertical-align: middle;
     max-height: 2.5em;
-    margin: .3em;
+    margin: 0 .5em .3em .3em;
 
     &+input {
         display: inline-block;
@@ -1463,9 +1442,9 @@ img.captcha {
         vertical-align: middle;
     }
 
-    // ~.btn {
-    //     margin-top: -1px;
-    // }
+    ~.btn {
+        margin-top: -1px;
+    }
 
     ~img {
         display: inline-block;
@@ -1519,10 +1498,4 @@ abbr[title] {
             left: auto;
         }
     }
-}
-
-//----------------需要label，但又不要出現在畫面上時----------------//
-.label_hidden{
-    font-size: 0;
-    line-height: 1;
 }
