--- a/sass/sass/modual/_link.scss
+++ b/sass/sass/modual/_link.scss
@@ -1,5 +1,7 @@
 // 自動產生編號：https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Lists_and_Counters/Using_CSS_counters
-.np {
+
+// 選項次層
+.sub_menu {
     ul, ol {
         display: flex;
         flex-direction: row;
