--- a/sass/sass/element/_divider.scss
+++ b/sass/sass/element/_divider.scss
@@ -66,3 +66,12 @@
         bottom: 0
     }
 }
+
+// hr
+hr {
+    border: none;
+    border-top: 1px solid #CFCFCF;
+    margin: 1em 0px;
+    display: block;
+    clear: both;
+}
