--- a/sass/sass/element/_tooltip.scss
+++ b/sass/sass/element/_tooltip.scss
@@ -1,8 +1,7 @@
 //參考資料：https://codepen.io/tutsplus/pen/WROvdG?q=tooltip&limit=all&type=type-pens
 $tooltop-font-size:$font-size;
-[tooltip] {
-    position: relative;
-}
+[tooltip] { position: relative; }
+
 [tooltip]:before,
 [tooltip]:after {
     text-transform: none;
@@ -35,13 +34,11 @@ $tooltop-font-size:$font-size;
     box-sizing: border-box;
 }
 [tooltip]:hover:before,
-[tooltip]:hover:after {
-    display: block;
-}
+[tooltip]:hover:after { display: block; }
+
 [tooltip='']:before,
-[tooltip='']:after {
-    display: none !important;
-}
+[tooltip='']:after { display: none !important; }
+
 [tooltip]:not([flow]):before,
 [tooltip][flow^="up"]:before {
     bottom: 100%;
@@ -49,9 +46,8 @@ $tooltop-font-size:$font-size;
     border-top-color: #333;
 }
 [tooltip]:not([flow]):after,
-[tooltip][flow^="up"]:after {
-    bottom: calc(100% + 5px);
-}
+[tooltip][flow^="up"]:after { bottom: calc(100% + 5px); }
+
 [tooltip]:not([flow]):before,
 [tooltip]:not([flow]):after,
 [tooltip][flow^="up"]:before,
@@ -59,14 +55,15 @@ $tooltop-font-size:$font-size;
     left: 50%;
     transform: translate(-50%, -.5em);
 }
+
 [tooltip][flow^="down"]:before {
     top: 100%;
     border-top-width: 0;
     border-bottom-color: #333;
 }
-[tooltip][flow^="down"]:after {
-    top: calc(100% + 5px);
-}
+
+[tooltip][flow^="down"]:after { top: calc(100% + 5px); }
+
 [tooltip][flow^="down"]:before,
 [tooltip][flow^="down"]:after {
     left: 50%;
@@ -114,12 +111,26 @@ $tooltop-font-size:$font-size;
 [tooltip][flow^="up"]:hover:before,
 [tooltip][flow^="up"]:hover:after,
 [tooltip][flow^="down"]:hover:before,
-[tooltip][flow^="down"]:hover:after {
-    animation: tooltips-vert 300ms ease-out forwards;
-}
+[tooltip][flow^="down"]:hover:after { animation: tooltips-vert 300ms ease-out forwards; }
+
 [tooltip][flow^="left"]:hover:before,
 [tooltip][flow^="left"]:hover:after,
 [tooltip][flow^="right"]:hover:before,
-[tooltip][flow^="right"]:hover:after {
-    animation: tooltips-horz 300ms ease-out forwards;
+[tooltip][flow^="right"]:hover:after { animation: tooltips-horz 300ms ease-out forwards; }
+
+// -----------------------------------
+.tooltip {
+    text-align: center;
+    padding: 40px 0;
+    span {
+        display: inline-block;
+        background: #DEDEDE;
+        text-align: center;
+        padding: 10px;
+        width: 100px;
+        height: 20px;
+        line-height: 20px;
+        vertical-align: baseline;
+    }
+    p>em { color: red; }
 }
