20210422 slider無障礙修改、tab改button、增加 google搜尋列表頁、調整列印css

--- a/sass/sass/common/_grid.scss
+++ b/sass/sass/common/_grid.scss
@@ -73,7 +73,7 @@
         @include make-md-column(8);
         @include make-lg-column(8);
     }
-    .col:nth-child(2n) {
+    .col:nth-of-type(2n) {
         @include make-xs-column(12);
         @include make-sm-column(4);
         @include make-md-column(4);
@@ -88,7 +88,7 @@
         @include make-md-column(4);
         @include make-lg-column(4);
     }
-    .col:nth-child(2n) {
+    .col:nth-of-type(2n) {
         @include make-xs-column(12);
         @include make-sm-column(8);
         @include make-md-column(8);
