--- a/sass/sass/modual/_slick.scss
+++ b/sass/sass/modual/_slick.scss
@@ -1,3 +1,4 @@
+// slick.css
 /* Slider */
 .slick-slider {
     position: relative;
@@ -101,6 +102,7 @@
         }
     }
 }
+// slick_theme.css
 /* ---箭頭的樣式--- */
 .slick-prev, .slick-next {
     font-size: 0em;
