--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -1,80 +1,85 @@
-* { box-sizing: border-box; 
+* {
+    box-sizing: border-box;
 }
-html { scroll-behavior: smooth; }
+html {
+    scroll-behavior: smooth;
+}
 body {
-  &.noscroll {
-    position: static !important;
-    width: 100%;
-    height: 100%;
-    overflow: hidden !important;
-    overflow-y: hidden !important;
-    margin: 0;
-    padding: 0;
-  }
+    &.noscroll {
+        position: static !important;
+        width: 100%;
+        height: 100%;
+        overflow: hidden !important;
+        overflow-y: hidden !important;
+        margin: 0;
+        padding: 0;
+    }
 }
 // 最外圍預設為100%
 .wrapper {
-  width: 100%;
-  margin: 0px auto;
-  @include screen('mobile') {
-    background: #FFF;
-    overflow: hidden;
-    overflow-y: auto;
-  }
+    width: 100%;
+    margin: 0px auto;
+    @include screen('mobile') {
+        background: #FFF;
+        overflow: hidden;
+        overflow-y: auto;
+    }
 }
 // 整體共用container樣式，請注意首頁切版頁面的整齊
 .container {
-  padding: 0;
-  margin: 0 auto;
+    padding: 0;
+    margin: 0 auto;
     max-width: $container-max; //請看_variable.scss
-  }
-  .main {
+}
+.main {
     position: relative;
     margin: 0 auto;
-    padding:  1em 0 0 0;
+    padding: 1em 0 0 0;
     // 可先設定一個中央區塊最大寬，限制accesskey對齊
-
     h2 {
-      line-height: 1.25em;
+        line-height: 1.25em;
     }
-  }
+}
 ////////////////////////////////////////////////////////////
 // 為了與首頁區隔，請在內頁加上innerpage ClassName
 .innerpage {
-
-  >.container {
+    >.container {
         @include gutter(); //gutter 代表左右要留白
         display: flex;
-      }
-      .center_block {
-        flex:auto;
+    }
+    .center_block {
+        flex: auto;
         max-width: 100%;
         // overflow: hidden;
-      }
-     .left_block {
-        flex:0 0 260px;
+    }
+    .left_block {
+        flex: 0 0 260px;
         max-width: 260px;
         // float: left;
         // width: 260px;
         margin-right: 40px;
-
-        &.hidden{
-          +.center_block { max-width: 100%; }
+        &.hidden {
+            +.center_block {
+                max-width: 100%;
+            }
         }
-
         +.center_block {
-          max-width: calc(100% - 300px);
+            max-width: calc(100% - 300px);
         }
-
         @include screen('tablet') {
-          display: none;
-          +.center_block { max-width: 100%; }
+            display: none;
+            +.center_block {
+                max-width: 100%;
+            }
         }
-      }
-      &.small_size { font-size: .938em; }
-      &.large_size { font-size: 1.125em; }
-  }
-
-  .hidden{
+    }
+    &.small_size {
+        font-size: .938em;
+    }
+    &.large_size {
+        font-size: 1.125em;
+    }
+}
+.hidden {
     display: none;
-  }
+}
