--- a/sass/sass/element/_image.scss
+++ b/sass/sass/element/_image.scss
@@ -51,6 +51,8 @@ img {
             color: #FFF;
             margin: 0;
             bottom: 0;
+            left:0;
+            right:0;
             z-index: 2;
             text-align: center;
             @include text-overflow;
