--- a/sass/page/_left_block.scss
+++ b/sass/page/_left_block.scss
@@ -13,13 +13,14 @@
 }
 .leftblock_list {
     padding: 0 0 20px 0;
-    h2 {
+    .title{
         margin: 0 0 1em;
         padding: .5em;
         text-align: center;
         color: #fff;
         background-color: #666;
         font-size: 1.25em;
+        font-weight: bolder;
     }
     ul {
         margin: 0;
@@ -56,13 +57,14 @@
 }
 .leftblock_nodemenu {
     padding: 0 0 20px 0;
-    h2 {
+    .title {
         margin: 0 0 1em;
         padding: .5em;
         text-align: center;
         color: #fff;
         background-color: #666;
         font-size: 1.25em;
+        font-weight: bolder;
     }
     ul {
         margin: 0;
