--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -43,10 +43,11 @@ $grid-gutter-width: 30px !default;         //左右padding
 $container-max: 1200px !default;           //container最大寬
 
 //mediaquery
-$screen-lg: 1400px !default; //電腦
-$screen-md: 992px !default; //平板
-$screen-sm: 768px !default; //手機
-$screen-xs: 576px !default; //極小尺寸
+$screen-lg: 1400px !default; 				//電腦
+$screen-md: 992px  !default;				//平板
+$screen-sm: 768px  !default;				//手機
+// $screen-xs: 576px !default;				//極小尺寸 - bootstrap
+$screen-xs: 320px  !default;				//極小尺寸
 
 //-------------------------------------------------------客製化------//
 
