2021-0615 整理btn的html、新增tooltip至CP頁、更新tooltip的css

--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -46,8 +46,8 @@ $container-max: 1200px !default;           //container最大寬
 $screen-lg: 1400px !default; 				//電腦
 $screen-md: 992px  !default;				//平板
 $screen-sm: 768px  !default;				//手機
-// $screen-xs: 576px !default;				//極小尺寸 - bootstrap
-$screen-xs: 320px  !default;				//極小尺寸
+$screen-xs: 576px !default;			    	//極小尺寸 - hyui
+$screen-xs-flex: 320px  !default;			//極小尺寸 - flex
 
 //-------------------------------------------------------客製化------//
 
