--- a/sass/sass/element/_btn.scss
+++ b/sass/sass/element/_btn.scss
@@ -1,7 +1,7 @@
 // 按鈕設定
 $btn-font-color:$btn-word;
 $btn-border:darken($btn-font-color, 5);
-$btn-padding:.5em 1.5em;
+$btn-padding:.5em 1.25em;
 $btn-radius:.2em;
 // 按鈕外框
 .btn_grp {
@@ -56,8 +56,8 @@ $btn-radius:.2em;
     margin:.25em .1em;
     
     i {
-        margin-right: .2em;
-        margin-left: -.3em;
+        margin-right: .25em;
+        margin-left: .25em;
     }
 }
 // 按鈕基本樣式
