2021-0618 更新 btn 橘色對比度

--- a/sass/_variable.scss
+++ b/sass/_variable.scss
@@ -11,8 +11,8 @@ $importantColor: #eb0202; //重要
 // 但注意真實顏色與語意的關聯必須易於辨識
 $color-blue: #0066cc;
 $color-green: #298729;
-$color-orange: #cd4502;
-$color-red: #eb0202;
+$color-orange: #d04500;
+$color-red: #d30000;
 $color-yellow: #fec003;
 $color-purple: #781f79;
 $color-gray: #ccc;
