--- a/sass/sass/modual/_notice.scss
+++ b/sass/sass/modual/_notice.scss
@@ -53,7 +53,7 @@
     }
 }
 *[class*="notice_success"] {
-    color: #4F8A10;
+    color: #3B7600;
     background-color: #DFF2BF;
     &:before {
         background: url(../images/basic/icon_success.svg) no-repeat center center;
@@ -61,7 +61,7 @@
     }
 }
 *[class*="notice_warning"] {
-    color: #c74302;
+    color: #C23E00;
     background-color: #FEEFB3;
     &:before {
         background: url(../images/basic/icon_warning.svg) no-repeat center center;
@@ -69,7 +69,7 @@
     }
 }
 *[class*="notice_error"] {
-    color: #D8000C;
+    color: #C40000;
     background-color: #FFD2D2;
     &:before {
         background: url(../images/basic/icon_error.svg) no-repeat center center;
