--- a/sass/sass/element/_icon.scss
+++ b/sass/sass/element/_icon.scss
@@ -15,294 +15,231 @@
         margin-bottom: .1em;
     }
 }
+// 依英文字母排序
+///////////////////////////////////////////////////////////////////////////  彩色 icon
+// ---------------- C ----------------
+.i_calendar_color { @include hyui_icon('icon_calendar_color'); }
 
-.i_add {
-    @include hyui_icon('icon_add');
-}
-.i_apple {
-    @include hyui_icon('icon_apple');
-}
-.i_arrow_left {
-    @include hyui_icon('icon_arrow_left');
-}
-.i_arrow_right {
-    @include hyui_icon('icon_arrow_right');
-}
-.i_arrow_up {
-    @include hyui_icon('icon_arrow_up');
-}
-.i_arrow_down {
-    @include hyui_icon('icon_arrow_down');
-}
-.i_bookmark {
-    @include hyui_icon('icon_bookmark');
-}
-.i_chat {
-    @include hyui_icon('icon_chat');
-}
-.i_check {
-    @include hyui_icon('icon_check');
-}
-.i_clock {
-    @include hyui_icon('icon_clock');
-}
-.i_close {
-    @include hyui_icon('icon_close');
-}
-.i_edit {
-    @include hyui_icon('icon_edit');
-}
-.i_facebook {
-    @include hyui_icon('icon_facebook');
-}
-.i_googleplus {
-    @include hyui_icon('icon_googleplus');
-}
-.i_grid {
-    @include hyui_icon('icon_grid');
-}
-.i_heart {
-    @include hyui_icon('icon_heart');
-}
-.i_home {
-    @include hyui_icon('icon_home');
-}
-.i_info {
-    @include hyui_icon('icon_info');
-}
-.i_link {
-    @include hyui_icon('icon_link');
-}
-.i_linkedin {
-    @include hyui_icon('icon_linkedin');
-}
-.i_lock {
-    @include hyui_icon('icon_lock');
-}
-.i_mail {
-    @include hyui_icon('icon_mail');
-}
-.i_rss {
-    @include hyui_icon('icon_rss');
-}
-.i_setting {
-    @include hyui_icon('icon_setting');
-}
-.i_star {
-    @include hyui_icon('icon_star');
-}
-.i_twitter {
-    @include hyui_icon('icon_twitter');
-}
-.i_video {
-    @include hyui_icon('icon_video');
-}
-.i_vimeo {
-    @include hyui_icon('icon_vimeo');
-}
-.i_youtube {
-    @include hyui_icon('icon_youtube');
-}
-.i_global {
-    @include hyui_icon('icon_global');
-}
-.i_trash {
-    @include hyui_icon('icon_trash');
-}
-.i_sort {
-    @include hyui_icon('icon_sort');
-}
-.i_move {
-    @include hyui_icon('icon_move');
-}
-.i_layout {
-    @include hyui_icon('icon_layout');
-}
-.i_copy {
-    @include hyui_icon('icon_copy');
-}
-.i_view {
-    @include hyui_icon('icon_view');
-}
-.i_man {
-    @include hyui_icon('icon_man');
-}
-.i_calendar {
-    @include hyui_icon('icon_calendar');
-}
-.i_search {
-    @include hyui_icon('icon_search');
-}
-.i_pick {
-    @include hyui_icon('icon_pick');
-}
-.i_calendar_color {
-    @include hyui_icon('icon_calendar_color');
-}
-.i_dot{
-    @include hyui_icon('icon_dot');
-}
-.i_photo{
-    @include hyui_icon('icon_photo');
-}
-.i_order{
-    @include hyui_icon('icon_order');
-}
-.i_top{
-    @include hyui_icon('icon_top');
-}
-.i_minus{
-    @include hyui_icon('icon_minus');
-}
-.i_play{
-    @include hyui_icon('icon_play');
-}
-.i_reflash{
-    @include hyui_icon('icon_reflash');
-}
+///////////////////////////////////////////////////////////////////////////  黑色 icon
+// ---------------- A ----------------
+.i_add { @include hyui_icon('icon_add'); }
+.i_apple { @include hyui_icon('icon_apple'); }
+.i_arrow_left { @include hyui_icon('icon_arrow_left'); }
+.i_arrow_right { @include hyui_icon('icon_arrow_right'); }
+.i_arrow_up { @include hyui_icon('icon_arrow_up'); }
+.i_arrow_down { @include hyui_icon('icon_arrow_down'); }
 
-//白色icon
-.i_add2 {
-    @include hyui_icon('icon_add2');
-}
-.i_apple2 {
-    @include hyui_icon('icon_apple2');
-}
-.i_arrow_left2 {
-    @include hyui_icon('icon_arrow_left2');
-}
-.i_arrow_right2 {
-    @include hyui_icon('icon_arrow_right2');
-}
-.i_arrow_up2 {
-    @include hyui_icon('icon_arrow_up2');
-}
-.i_arrow_down2 {
-    @include hyui_icon('icon_arrow_down2');
-}
-.i_bookmark2 {
-    @include hyui_icon('icon_bookmark2');
-}
-.i_chat2 {
-    @include hyui_icon('icon_chat2');
-}
-.i_check2 {
-    @include hyui_icon('icon_check2');
-}
-.i_clock2 {
-    @include hyui_icon('icon_clock2');
-}
-.i_close2 {
-    @include hyui_icon('icon_close2');
-}
-.i_edit2 {
-    @include hyui_icon('icon_edit2');
-}
-.i_facebook2 {
-    @include hyui_icon('icon_facebook2');
-}
-.i_googleplus2 {
-    @include hyui_icon('icon_googleplus2');
-}
-.i_grid2 {
-    @include hyui_icon('icon_grid2');
-}
-.i_heart2 {
-    @include hyui_icon('icon_heart2');
-}
-.i_home2 {
-    @include hyui_icon('icon_home2');
-}
-.i_info2 {
-    @include hyui_icon('icon_info2');
-}
-.i_link2 {
-    @include hyui_icon('icon_link2');
-}
-.i_linkedin2 {
-    @include hyui_icon('icon_linkedin2');
-}
-.i_lock2 {
-    @include hyui_icon('icon_lock2');
-}
-.i_mail2 {
-    @include hyui_icon('icon_mail2');
-}
-.i_rss2 {
-    @include hyui_icon('icon_rss2');
-}
-.i_setting2 {
-    @include hyui_icon('icon_setting2');
-}
-.i_star2 {
-    @include hyui_icon('icon_star2');
-}
-.i_twitter2 {
-    @include hyui_icon('icon_twitter2');
-}
-.i_video2 {
-    @include hyui_icon('icon_video2');
-}
-.i_vimeo2 {
-    @include hyui_icon('icon_vimeo2');
-}
-.i_youtube2 {
-    @include hyui_icon('icon_youtube2');
-}
-.i_global2 {
-    @include hyui_icon('icon_global2');
-}
-.i_trash2 {
-    @include hyui_icon('icon_trash2');
-}
-.i_sort2 {
-    @include hyui_icon('icon_sort2');
-}
-.i_move2 {
-    @include hyui_icon('icon_move2');
-}
-.i_layout2 {
-    @include hyui_icon('icon_layout2');
-}
-.i_copy2 {
-    @include hyui_icon('icon_copy2');
-}
-.i_view2 {
-    @include hyui_icon('icon_view2');
-}
-.i_man2 {
-    @include hyui_icon('icon_man2');
-}
-.i_calendar2 {
-    @include hyui_icon('icon_calendar2');
-}
-.i_search2 {
-    @include hyui_icon('icon_search2');
-}
-.i_pick2 {
-    @include hyui_icon('icon_pick2');
-}
-.i_calendar_color2 {
-    @include hyui_icon('icon_calendar_color2');
-}
-.i_dot2{
-    @include hyui_icon('icon_dot2');
-}
-.i_photo2{
-    @include hyui_icon('icon_photo2');
-}
-.i_order2{
-    @include hyui_icon('icon_order2');
-}
-.i_top2{
-    @include hyui_icon('icon_top2');
-}
-.i_minus2{
-    @include hyui_icon('icon_minus2');
-}
-.i_play2{
-    @include hyui_icon('icon_play2');
-}
-.i_reflash2{
-    @include hyui_icon('icon_reflash2');
-}
+
+// ---------------- B ----------------
+.i_bookmark { @include hyui_icon('icon_bookmark'); }
+
+
+// ---------------- C ----------------
+.i_calendar { @include hyui_icon('icon_calendar'); }
+.i_chat { @include hyui_icon('icon_chat'); }
+.i_check { @include hyui_icon('icon_check'); }
+.i_clock { @include hyui_icon('icon_clock'); }
+.i_close { @include hyui_icon('icon_close'); }
+.i_copy { @include hyui_icon('icon_copy'); }
+
+
+// ---------------- D ----------------
+.i_dot { @include hyui_icon('icon_dot'); }
+
+
+// ---------------- E ----------------
+.i_edit { @include hyui_icon('icon_edit'); }
+
+
+// ---------------- F ----------------
+.i_facebook { @include hyui_icon('icon_facebook'); }
+
+
+// ---------------- G ----------------
+.i_global { @include hyui_icon('icon_global'); }
+.i_googleplus { @include hyui_icon('icon_googleplus'); }
+.i_grid { @include hyui_icon('icon_grid'); }
+
+
+// ---------------- H ----------------
+.i_heart { @include hyui_icon('icon_heart'); }
+.i_home { @include hyui_icon('icon_home'); }
+
+
+// ---------------- I ----------------
+.i_info { @include hyui_icon('icon_info'); }
+
+
+// ---------------- J ----------------
+// ---------------- K ----------------
+
+// ---------------- L ----------------
+.i_layout { @include hyui_icon('icon_layout'); }
+.i_link { @include hyui_icon('icon_link'); }
+.i_linkedin { @include hyui_icon('icon_linkedin'); }
+.i_lock { @include hyui_icon('icon_lock'); }
+
+
+// ---------------- M ----------------
+.i_mail { @include hyui_icon('icon_mail'); }
+.i_man { @include hyui_icon('icon_man'); }
+.i_minus { @include hyui_icon('icon_minus'); }
+.i_move { @include hyui_icon('icon_move'); }
+
+
+// ---------------- N ----------------
+// ---------------- O ----------------
+.i_order { @include hyui_icon('icon_order'); }
+
+
+// ---------------- P ----------------
+.i_photo { @include hyui_icon('icon_photo'); }
+.i_pick { @include hyui_icon('icon_pick'); }
+.i_play { @include hyui_icon('icon_play'); }
+
+
+// ---------------- Q ----------------
+
+// ---------------- R ----------------
+.i_reflash { @include hyui_icon('icon_reflash'); }
+.i_rss { @include hyui_icon('icon_rss'); }
+
+// ---------------- S ----------------
+.i_search { @include hyui_icon('icon_search'); }
+.i_setting { @include hyui_icon('icon_setting'); }
+.i_sort { @include hyui_icon('icon_sort'); }
+.i_star { @include hyui_icon('icon_star'); }
+
+
+// ---------------- T ----------------
+.i_top { @include hyui_icon('icon_top'); }
+.i_trash { @include hyui_icon('icon_trash'); }
+.i_twitter { @include hyui_icon('icon_twitter'); }
+
+
+// ---------------- U ----------------
+// ---------------- V ----------------
+.i_video { @include hyui_icon('icon_video'); }
+.i_view { @include hyui_icon('icon_view'); }
+.i_vimeo { @include hyui_icon('icon_vimeo'); }
+
+
+// ---------------- W ----------------
+// ---------------- X ----------------
+// ---------------- Y ----------------
+.i_youtube { @include hyui_icon('icon_youtube'); }
+
+
+// ---------------- Z ----------------
+
+
+///////////////////////////////////////////////////////////////////////////  白色icon
+// ---------------- A ----------------
+.i_add2 { @include hyui_icon('icon_add2'); }
+.i_apple2 { @include hyui_icon('icon_apple2'); }
+.i_arrow_left2 { @include hyui_icon('icon_arrow_left2'); }
+.i_arrow_right2 { @include hyui_icon('icon_arrow_right2'); }
+.i_arrow_up2 { @include hyui_icon('icon_arrow_up2'); }
+.i_arrow_down2 { @include hyui_icon('icon_arrow_down2'); }
+
+
+// ---------------- B ----------------
+.i_bookmark2 { @include hyui_icon('icon_bookmark2'); }
+
+
+// ---------------- C ----------------
+.i_calendar2 { @include hyui_icon('icon_calendar2'); }
+.i_calendar_color2 { @include hyui_icon('icon_calendar_color2'); }
+.i_chat2 { @include hyui_icon('icon_chat2'); }
+.i_check2 { @include hyui_icon('icon_check2'); }
+.i_clock2 { @include hyui_icon('icon_clock2'); }
+.i_close2 { @include hyui_icon('icon_close2'); }
+.i_copy2 { @include hyui_icon('icon_copy2'); }
+
+
+// ---------------- D ----------------
+.i_dot2 { @include hyui_icon('icon_dot2'); }
+
+
+// ---------------- E ----------------
+.i_edit2 { @include hyui_icon('icon_edit2'); }
+
+
+// ---------------- F ----------------
+.i_facebook2 { @include hyui_icon('icon_facebook2'); }
+
+
+// ---------------- G ----------------
+.i_global2 { @include hyui_icon('icon_global2'); }
+.i_googleplus2 { @include hyui_icon('icon_googleplus2'); }
+.i_grid2 { @include hyui_icon('icon_grid2'); }
+
+
+// ---------------- H ----------------
+.i_heart2 { @include hyui_icon('icon_heart2'); }
+.i_home2 { @include hyui_icon('icon_home2'); }
+
+
+// ---------------- I ----------------
+.i_info2 { @include hyui_icon('icon_info2'); }
+
+
+// ---------------- J ----------------
+// ---------------- K ----------------
+
+// ---------------- L ----------------
+.i_layout2 { @include hyui_icon('icon_layout2'); }
+.i_link2 { @include hyui_icon('icon_link2'); }
+.i_linkedin2 { @include hyui_icon('icon_linkedin2'); }
+.i_lock2 { @include hyui_icon('icon_lock2'); }
+
+
+// ---------------- M ----------------
+.i_mail2 { @include hyui_icon('icon_mail2'); }
+.i_man2 { @include hyui_icon('icon_man2'); }
+.i_minus2 { @include hyui_icon('icon_minus2'); }
+.i_move2 { @include hyui_icon('icon_move2'); }
+
+
+// ---------------- N ----------------
+// ---------------- O ----------------
+.i_order2 { @include hyui_icon('icon_order2'); }
+
+
+// ---------------- P ----------------
+.i_photo2 { @include hyui_icon('icon_photo2'); }
+.i_pick2 { @include hyui_icon('icon_pick2'); }
+.i_play2 { @include hyui_icon('icon_play2'); }
+
+
+// ---------------- Q ----------------
+
+// ---------------- R ----------------
+.i_reflash2 { @include hyui_icon('icon_reflash2'); }
+.i_rss2 { @include hyui_icon('icon_rss2'); }
+
+// ---------------- S ----------------
+.i_search2 { @include hyui_icon('icon_search2'); }
+.i_setting2 { @include hyui_icon('icon_setting2'); }
+.i_sort2 { @include hyui_icon('icon_sort2'); }
+.i_star2 { @include hyui_icon('icon_star2'); }
+
+
+// ---------------- T ----------------
+.i_top2 { @include hyui_icon('icon_top2'); }
+.i_trash2 { @include hyui_icon('icon_trash2'); }
+.i_twitter2 { @include hyui_icon('icon_twitter2'); }
+
+
+// ---------------- U ----------------
+// ---------------- V ----------------
+.i_video2 { @include hyui_icon('icon_video2'); }
+.i_view2 { @include hyui_icon('icon_view2'); }
+.i_vimeo2 { @include hyui_icon('icon_vimeo2'); }
+
+
+// ---------------- W ----------------
+// ---------------- X ----------------
+// ---------------- Y ----------------
+.i_youtube2 { @include hyui_icon('icon_youtube2'); }
+
